<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GnuCash</string>
    <string name="title_add_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="info_details">Info</string>
    <string name="menu_export_ofx">Export OFX</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="label_no_transactions_to_display">No transactions to display</string>
    <string name="label_transaction_name">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_timeanddate">DATE &amp; TIME</string>
    <string name="label_account">Account</string>
    <string name="label_debit">DEBIT</string>
    <string name="label_credit">CREDIT</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">DELETE</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="delete_account_confirmation_message">All transactions in this account will also be deleted</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Note</string>
    <string name="menu_move">MOVE</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_transactions_total">Total sum:</string>
    <string name="label_export_destination">Export Destination</string>
    <string name="title_export_dialog">Export Transactions</string>
    <string name="option_export_all_transactions">Export all transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="error_exporting">Error exporting OFX data</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Share file…</item>
        <item>SD Card</item>
    </string-array>
    <string name="btn_move">Move</string>
    <string name="title_move_transactions">Move %1$d transaction(s)</string>
    <string name="label_move_destination">Destination Account</string>
    <string name="permission_access_sdcard">Access SD Card</string>
    <string name="title_share_ofx_with">Share OFX export with…</string>
    <string name="key_default_currency">default_currency</string>
    <string name="toast_incompatible_currency">Cannot move transactions.\nThe destination account uses a different currency from origin account</string>
    <string name="header_general_settings">General</string>
    <string name="header_about_gnucash">About</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_default_currency">Default currency</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="label_permission_record_transactions">Enables recording transactions in GnuCash for Android</string>
    <string name="label_permission_create_accounts">Enables creation of accounts in GnuCash for Android</string>
    <string name="label_permission_group">Your GnuCash data</string>
    <string name="description_permission_group">Read and modify GnuCash data</string>
    <string name="label_permission_record_transaction">record transactions</string>
    <string name="label_permission_create_account">create accounts</string>
    <string name="label_display_account">Display account</string>
    <string name="btn_create_accounts">Create Accounts</string>
    <string name="title_default_accounts">Select accounts to create</string>
    <string name="key_first_run">key_first_run</string>
    <string name="title_transaction_preferences">Transaction Preferences</string>
    <string name="title_account_preferences">Account Preferences</string>
    <string name="key_default_transaction_type">default_transaction_type</string>
    <string name="title_default_transaction_type">Default Transaction Type</string>
    <string name="summary_default_transaction_type">The type of transaction to use by default, CREDIT or DEBIT</string>
    <string name="title_export_preference_category">Export</string>
    <string name="key_export_all_transactions">export_all_transactions</string>
    <string name="title_export_all_transactions">Export all transactions</string>
    <string name="key_delete_transactions_after_export">delete_transactions_after_export</string>
    <string name="title_always_delete_exported_transactions">Delete exported transactions</string>
    <string name="key_default_export_email">export_email_target</string>
    <string name="title_default_export_email">Default export email</string>
    <string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
    <string name="key_use_double_entry">use_double_entry</string>
    <string name="key_xml_ofx_header">xml_ofx_header</string>
    <string name="summary_use_double_entry">All transactions will be a transfer from one account to another</string>
    <string name="title_use_double_entry">Activate Double Entry</string>
    <string name="label_account_currency">Currency</string>
    <string name="label_parent_account">Parent account</string>
    <string name="title_xml_ofx_header">Use XML OFX header</string>
    <string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
    <string name="key_import_accounts">import_gnucash_accounts</string>
    <string name="summary_import_accounts">Import account structure exported from GnuCash desktop</string>
    <string name="title_import_accounts">Import GnuCash accounts</string>
    <string name="key_delete_all_accounts">delete_all_accounts</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as
        well.
    </string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="title_default_export_format">Default Export Format</string>
    <string name="key_default_export_format">default_export_format</string>
    <string name="summary_default_export_format">File format to use by default when exporting transactions</string>
</resources>