<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_account_preferences"/>
    <ListPreference android:summary="@string/summary_default_currency"
                    android:key="@string/key_default_currency"
                    android:dialogTitle="@string/title_choose_currency"
                    android:title="@string/title_default_currency"
                    android:entries="@array/currency_names"
                    android:entryValues="@array/currency_codes"/>
    <Preference android:key="@string/key_import_accounts"
                android:summary="@string/summary_import_accounts"
                android:title="@string/title_import_accounts" />
    <Preference android:key="@string/key_delete_all_accounts"
                android:summary="@string/summary_delete_all_accounts"
                android:title="@string/title_delete_all_accounts" />
</PreferenceScreen>