<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2012 Ngewi Fet <ngewif@gmail.com>
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/dialog_padding"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:text="@string/label_export_destination"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginBottom="-8dip"
	        android:layout_marginLeft="@dimen/dialog_padding"
	        style="@style/TextAppearance.EditTransaction_LabelSmall" />
	
	    <Spinner android:id="@+id/spinner_export_destination"
	        android:layout_height="wrap_content" 
	        android:layout_width="match_parent"
	        style="@style/ListItem"
	        android:layout_marginLeft="@dimen/dialog_padding"
	        android:layout_marginRight="@dimen/dialog_padding"
	        android:layout_marginBottom="@dimen/dialog_padding" />

        <TextView
                android:id="@+id/label_export_format"
                android:text="Export Format"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="-8dip"
                android:layout_marginLeft="@dimen/dialog_padding"
                style="@style/TextAppearance.EditTransaction_LabelSmall" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dialog_padding"
                    android:layout_marginRight="@dimen/dialog_padding"
                    android:layout_marginBottom="@dimen/dialog_padding"
                    android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_qif_format"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:checked="true"
                         android:text="QIF" />

            <RadioButton android:id="@+id/radio_ofx_format"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="OFX"/>

            <RadioButton android:id="@+id/radio_log_format"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="LOG"/>
        </RadioGroup>
        <TextView android:id="@+id/export_warning"
                  android:layout_marginLeft="@dimen/dialog_padding"
                  android:text="Some format-based export warning"
                  android:textColor="@color/account_red"
                  style="@style/TextAppearance.Hint"
                  android:visibility="gone" />

	    <CheckBox android:id="@+id/checkbox_export_all"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/option_export_all_transactions"        
	        />
	    <TextView android:layout_marginLeft="@dimen/dialog_padding"
	        android:text="@string/hint_export_choice"
	        style="@style/TextAppearance.Hint" />
	    
	    <CheckBox android:id="@+id/checkbox_post_export_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/dialog_padding"
	        android:layout_marginLeft="@dimen/dialog_padding"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/option_delete_after_export"
	        />
	        
	    <TextView android:layout_marginLeft="@dimen/dialog_padding"
	        android:text="@string/hint_delete_after_export"
	        style="@style/TextAppearance.Hint" />
    	
    	<include layout="@layout/default_buttons"/>

	</LinearLayout>
</ScrollView>