<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2012 Ngewi Fet <ngewif@gmail.com>
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/edit_text_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:ems="15" 
        android:inputType="textCapWords"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:singleLine="true"
        android:ellipsize="start"
        android:hint="@string/label_account_name"
        style="@style/ListItemText">
        <requestFocus />
    </EditText>
    
    <TextView
	    android:text="@string/label_account_currency"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_marginBottom="-8dip"
	    android:layout_marginLeft="10dp"
	    style="@style/TextAppearance.EditTransaction_LabelSmall" />
    
    <Spinner android:id="@+id/input_currency_spinner"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="20dp"
		style="@style/ListItem"		/>

    
    <TextView
	    android:text="@string/label_parent_account"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginBottom="-8dip"
	    style="@style/TextAppearance.EditTransaction_LabelSmall" />
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/ListItem"
	    android:orientation="horizontal" >
	    
	    <CheckBox android:id="@+id/checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:focusable="false"        />
	    <Spinner
	        android:id="@+id/input_parent_account"        
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"			
	        android:minHeight="?android:attr/listPreferredItemHeight" />
	</LinearLayout>
</LinearLayout>